--- a/OOFractalTrees/index.html
+++ b/OOFractalTrees/index.html
@@ -6,7 +6,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" type="text/javascript" src="OOFractalTrees.js"></script>
-  <script language="javascript" type="text/javascript" src="Branch.js"></script>
+  <script language="javascript" type="text/javascript" src="branch.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
